assets/styles/main.scss
/* ... */
/** Comments **/

.comments {
	margin-top: 50px;
	font-size: 14px;
	font-family: $font-bernino;

	h3 {
		font-size: 18px;
	}

	.comment-respond {
		margin-top: 25px;
	}

	.comment-list {
		list-style: none;
		padding-left: 50px;
		font-size: 14px !important;
		font-family: $font-bernino !important;

		p {
			font-family: $font-bernino;
			font-size: 14px;
		}

		.comment {
			margin-top: 25px;
			margin-bottom: 25px;

			.reply {
				display: none;
				visibility: hidden;
			}
		}

		.comment-meta {
			margin-bottom: 10px;

			.comment-metadata,
			.comment-author {
				pointer-events: none;
				cursor: default;

				a {
					color: $grey;
				}

				.fn .url {
					color: $grey-darker;
				}

				.edit-link a {
					pointer-events: all;
					cursor: pointer;
					color: $link-color;
					margin-left: 6px;
				}
			}

			.avatar {
				float: left;
				margin-left: -50px;
				width: 40px;
				height: 40px;
			}

			.says {
				display: none;
				visibility: hidden;
			}
		}

		.comment-awaiting-moderation {
			display: inline-block;
			color: $grey-dark;
			font-style: italic;
			background-color: lighten(#ecc132, 37%);
			border: 1px solid;
			border-color: lighten(#ecc132, 23%);
			border-radius: $border-radius;
			padding: 2px 6px;
			margin: 5px 0 0;
		}
	}

	.pingback {
		margin-left: -50px;
		font-style: italic;
	}

	.edit-link {
		color: $grey-dark;
		font-style: normal;

		&:before {
			content: '(';
		}

		&:after {
			content: ')';
		}
	}

	.comment-form {
		.comment-notes,
		.logged-in-as {
			font-family: $font-bernino;
			font-weight: 400;
			font-size: 14px;
		}

		label, .btn {
			font-size: 14px;
		}
	}
}

.comment-form-author,
.comment-form-email,
.comment-form-url {
    width: 50%;
}

.comment-form-comment {
	textarea {
		resize: none;
	}
}

.form-allowed-tags {
	display: none;
	visibility: hidden;
}




/* ==========================================================================
   Post Type Archives & Blog
   ========================================================================== */

.post-type-archive,
.blog,
.search-results {
	.entry-subtitle {
		margin-top: 0;
		font-size: 16px;
	}

	.entry-summary {
		@include prose-body;

		p,
		ul,
		ol {
			@include prose-body;
		}
	}
}

.post-type-archive,
.blog {
	.entry-meta-container {
		.post-type {
			display: none;
		}
	}
}

.archive-top-content {
	border-bottom: $border-grey-lighter-2px;
	padding-bottom: 30px;
	margin: 0 0 60px;
}

.grid-item {
	margin-bottom: 40px;

	.featured-image {
		float: none;
		text-align: center;
		margin-right: 0;

		a {
			display: inline-block;
			margin: 0 auto;
		}
	}

	.entry-title,
	.entry-subtitle {
		text-align: center;
		margin-top: 0;
		margin-bottom: 5px;
	}

	.entry-title {
		font-size: 20px;
	}

	.entry-meta-container {
		display: block;
		// text-align: center;
		font-size: 15px;
		color: $grey-dark;
		margin: 8px 0 12px;
	}

	.meta-datapoint {
		margin: 0 6px;
		float: none;
		display: inline-block;
	}

	.entry-meta-video {
		text-align: center;
	}

	.entry-summary {
		font-size: 17px;

		@media (min-width: $screen-lg-min) {
			font-size: 18px;
		}
	}
}

.post-type-archive-event {
	.archive-top-content {
		border: none;
	}

	#upcoming-events-title {
		text-align: center;
		background: $grey-light;
		padding: 10px 0;
		margin: -40px 0 60px;
	}

	#past-events-title {
		text-align: center;
		background: $grey-light;
		padding: 10px 0;
		margin: 80px 0;
	}

	.entry-title {
		margin-bottom: 5px;
	}
}

.post-type-archive-product {
	.featured-image {
		.wp-post-image {
			max-width: 80%;

			@media (min-width: $screen-sm-min) {
				max-height: 300px;
			}
		}
	}

	.entry-subtitle {
		margin-top: 8px;
		float: left;
	}

	.entry-meta-product {
		clear: none;

		.price {
			margin-top: -10px;
			font-size: 24px;
			float: right;
			margin-right: 0;

			i {
				font-size: 16px;
				margin-right: 2px;
			}
		}
	}

	.entry-summary {
		@include prose-body-sans;

		p,
		ul,
		ol {
			@include prose-body-sans;
		}
	}
}

.post-type-archive-associate {
	.featured-image {
		.wp-post-image {
			border-radius: 50%;
		}
	}

	.entry-meta-container {
		text-align: center;

		.website {
			display: none;
		}
	}

	.entry-summary {
		text-align: center;
	}
}




/* ==========================================================================
   Post Type Singles
   ========================================================================== */

.single {
	.post-type {
		display: none;
	}

	.main {
		header {
			background: $grey-lighter;
			padding: 14px 22px;
			border-radius: $border-radius;
			margin-bottom: 40px;

			.entry-subtitle {
				display: inline-block;
				margin: 4px 0 0;
			}

			.entry-meta-container {
				margin: 4px 0 0;
				clear: none;
			}
		}
	}

	.subscribe-form {
		background: $grey-lighter;
		padding: 14px 22px;
		margin-top: 15px;
		border-radius: $border-radius;

		.button {
			background: $white;
		}
	}
}

.single-post,
.single-event,
.single-podcast {
	.featured-image {
		width: 30%;
	}
}
/* ... */

